--- a/dashboard/templates/components/forms/courses_form.html
+++ b/dashboard/templates/components/forms/courses_form.html
@@ -1,4 +1,4 @@
-<form action="/dashboard/experiences/add" method="POST">{% csrf_token %}
+<form action="/dashboard/courses/add" method="POST">{% csrf_token %}
 
     <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1">Nome do curso</span>
@@ -15,7 +15,7 @@
     <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1">Carga horária</span>
         <input type="text" class="form-control" placeholder="Digite a carga horária" aria-label="Username"
-            aria-describedby="basic-addon1" name="Workload">
+            aria-describedby="basic-addon1" name="workload">
     </div>
 
     <div class="input-group mb-3">
