--- a/dashboard/templates/models_templates/header.html
+++ b/dashboard/templates/models_templates/header.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="{% static 'css/favorites.css' %}">
 <link rel="stylesheet" href="{% static 'css/form.css' %}">
 <link rel="stylesheet" href="{% static 'css/signin.css' %}">
+<link rel="stylesheet" href="{% static 'css/preview.css' %}">
 
 
 <!-- Title -->
