--- a/dashboard/templates/models_templates/page.html
+++ b/dashboard/templates/models_templates/page.html
@@ -27,5 +27,6 @@
 
 <!-- JS -->
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 </html>
