--- a/dashboard/templates/components/navbar/items.html
+++ b/dashboard/templates/components/navbar/items.html
@@ -1,6 +1,6 @@
 {% load static %}
 <li class="nav-item">
-    <a class="nav-link" style="color: black;" href="/"><img src="{% static 'icons/home.svg' %}" width="25rem"
+    <a class="nav-link spinner-loading" style="color: black;" href="/"><img src="{% static 'icons/home.svg' %}" width="25rem"
             style="margin-right: 20px;" alt="home"> Home</a>
 </li>
 
@@ -14,11 +14,11 @@
 
     <!-- Dropdown -->
     <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown" style="border: none;">
-        <li><a class="dropdown-item" href="/dashboard/experiences/"> Experiências Profissionais</a></li>
-        <li><a class="dropdown-item" href="/dashboard/courses/"> Cursos</a></li>
-        <li><a class="dropdown-item" href="/dashboard/favorites/"> Link</a></li>
-        <li><a class="dropdown-item" href="/dashboard/technologias/"> Tecnologias</a></li>
-        <li><a class="dropdown-item" href="/dashboard/tutorials/add/"> Tutorial</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/experiences/"> Experiências Profissionais</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/courses/"> Cursos</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/favorites/"> Link</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/technologias/"> Tecnologias</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/add/"> Tutorial</a></li>
     </ul>
 </li>
 
@@ -32,8 +32,8 @@
 
     <!-- Dropdown -->
     <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown" style="border: none;">
-        <li><a class="dropdown-item" href="/dashboard/tutorials/"> Java</a></li>
-        <li><a class="dropdown-item" href="/dashboard/tutorials/"> Python</a></li>
-        <li><a class="dropdown-item" href="/dashboard/tutorials/"> Debian</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/"> Java</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/"> Python</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/"> Debian</a></li>
     </ul>
 </li>
