--- a/dashboard/templates/components/navbar/navbar.html
+++ b/dashboard/templates/components/navbar/navbar.html
@@ -10,12 +10,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Text navbar -->
-      <a class="navbar-brand" href="/">Dashboard</a>
+      <a class="navbar-brand spinner-loading" href="/" style="color: white;">Dashboard</a>
     </div>
 
     <!-- Avatar -->
-    <!-- {% include 'components/avatar/avatar.html' %} -->
-      
+    {% include 'components/avatar/avatar.html' %}
+
 
     <!-- Menu -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -41,7 +41,7 @@
 
       <div>
         <ul>
-          <a class="dropdown-item" href="/signout/"> Sair</a>
+          <a class="dropdown-item" href="/logout_page/"> Sair</a>
         </ul>
       </div>
 
