--- a/dashboard/templates/models_templates/header.html
+++ b/dashboard/templates/models_templates/header.html
@@ -7,12 +7,13 @@
 <!-- Link's CSS -->
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
-<link rel="stylesheet" href="{% static 'css/avatar.css' %}">
 <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'css/avatar.css' %}">
 <link rel="stylesheet" href="{% static 'css/favorites.css' %}">
 <link rel="stylesheet" href="{% static 'css/form.css' %}">
 <link rel="stylesheet" href="{% static 'css/signin.css' %}">
 <link rel="stylesheet" href="{% static 'css/preview.css' %}">
+<link rel="stylesheet" href="{% static 'css/spider.css' %}">
 
 
 <!-- Title -->
