--- a/dashboard/templates/tutorials_add.html
+++ b/dashboard/templates/tutorials_add.html
@@ -5,6 +5,9 @@
 
 {% block content %}
     <div class="content">
-        {% include 'components/forms/tutorials_form.html' %}
+        <div class="form">
+            <h2>Cadastro de Tutoriais</h2>
+            {% include 'components/forms/tutorials_form.html' %}
+        </div>
     </div>
 {% endblock %}
