--- a/dashboard/templates/signin.html
+++ b/dashboard/templates/signin.html
@@ -4,7 +4,7 @@
 {% load avatar_tags %}
 
 {% block content %}
-    <div class="content">
-        {% include 'components/forms/login_form.html' %}
+    <div class="content" style="margin-top: 1rem;">
+            {% include 'components/forms/login_form.html' %}
     </div>
 {% endblock %}
