--- a/dashboard/templates/components/forms/tutorials_form.html
+++ b/dashboard/templates/components/forms/tutorials_form.html
@@ -11,7 +11,7 @@
 
             <div class="input-group mb-3">
                 <select class="form-select" aria-label="Default select example" name="technology">
-                    <option selected>Selecione o tipo</option>
+                    <option selected>Selecione o tipo de tecnológia</option>
                     {% for dt in tec %}
                     <option value="{{ dt.name }}">{{ dt.name }}</option>
                     {% endfor %}
