--- a/dashboard/templates/components/navbar/items.html
+++ b/dashboard/templates/components/navbar/items.html
@@ -26,14 +26,14 @@
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown"
         aria-expanded="false" style="color: black;">
-        <img src="{% static 'icons/experience.svg' %}" width="25rem" style="margin-right: 20px;" alt="courses">
+        <img src="{% static 'icons/tutorial.svg' %}" width="25rem" style="margin-right: 20px;" alt="courses">
         Tutorials
     </a>
 
     <!-- Dropdown -->
     <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown" style="border: none;">
-        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/"> Java</a></li>
-        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/"> Python</a></li>
-        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/"> Debian</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/tec/Java/"> Java</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/tec/Python/"> Python</a></li>
+        <li><a class="dropdown-item spinner-loading" href="/dashboard/tutorials/tec/Linux/"> Debian</a></li>
     </ul>
 </li>
