--- a/dashboard/templates/components/utils/tutorial_view.html
+++ b/dashboard/templates/components/utils/tutorial_view.html
@@ -1,1 +1,38 @@
-views
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+<div class="container bootstrap snippets bootdey">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="main-box no-header clearfix">
+                <div class="main-box-body clearfix">
+                    <div class="table-responsive">
+                        <table class="table user-list">
+                            <thead class="text-center">
+                                <tr>
+                                <th><span>Nome</span></th>
+                                <th><span>Descrição</span></th>
+                                <th><span>Tecnologia</span></th>
+                                <th>&nbsp;</th>
+                                </tr>
+                            </thead>
+                            <tbody class="text-center">
+                                {% for dt in dts %}
+                                    {% if dt.technology == tec %}
+                                <tr>
+                                    <td>
+                                        <a href="/dashboard/tutorials/{{ dt.id }}/"><span>{{ dt.name }}</span></a>
+                                    </td>
+                                    <td>{{ dt.description }}</td>
+                                    <td class="text-center">
+                                        <span>{{ dt.technology  }}</span>
+                                    </td>
+                                </tr>
+                                {% endif %}
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
