--- a/dashboard/templates/models_templates/footer.html
+++ b/dashboard/templates/models_templates/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar  navbar-dark bg-dark">
+<nav class="navbar  navbar-dark bg-dark footer">
   <div class="container-fluid">
     <!-- <footer> -->
     <p class="titlecred" style="color: white; margin: 0 auto;">Desenvolvido por: Thiago V. Lemes @ 2021<br>
