--- a/dashboard/static/css/navbar.css
+++ b/dashboard/static/css/navbar.css
@@ -2,24 +2,23 @@
     background-color: rgb(111, 33, 141);
 }
 
-.navbar-toggler-icon {
-    font-size: x-large;
-}
-
 .navbar-brand {
     font-size: 1.8rem;
     font-weight: 500;
     margin-left: 1rem;
 }
 
+.navbar-toggler{
+    font-size: 1.8rem;
+}
+
 @media (max-width: 589px) {
     .navbar-brand {
-        font-size: 1.0em;
+        font-size: 1.4em;
         margin-left: 0.1rem;
     }
     .navbar-toggler {
-        width: 3rem;
-        height: 3rem;
+        font-size: 1.5rem;
     }
     .navbar-toggler-icon {
         width: 1.5rem;
