--- a/dashboard/templates/models_templates/header.html
+++ b/dashboard/templates/models_templates/header.html
@@ -14,6 +14,8 @@
 <link rel="stylesheet" href="{% static 'css/signin.css' %}">
 <link rel="stylesheet" href="{% static 'css/preview.css' %}">
 <link rel="stylesheet" href="{% static 'css/spider.css' %}">
+<link rel="stylesheet" href="{% static 'css/tutorial_view.css' %}">
+<link rel="stylesheet" href="{% static 'css/footer.css' %}">
 
 
 <!-- Title -->
