--- a/dashboard/templates/components/utils/tutorial_view.html
+++ b/dashboard/templates/components/utils/tutorial_view.html
@@ -16,6 +16,7 @@
                             </thead>
                             <tbody class="text-center">
                                 {% for dt in dts %}
+                                {% if dt.technology == tec %}
                                 <tr>
                                     <td>
                                         <a href="/dashboard/tutorials/{{ dt.id }}/"><span>{{ dt.name }}</span></a>
@@ -25,6 +26,7 @@
                                         <span>{{ dt.technology  }}</span>
                                     </td>
                                 </tr>
+                                {% endif %}
                             {% endfor %}
                             </tbody>
                         </table>
